[gd_scene load_steps=3 format=3 uid="uid://4ffrm31ou3q3"]

[ext_resource type="PackedScene" uid="uid://cplcs76y7q8b" path="res://scenes/ui/card_menu_ui.tscn" id="1_a0dfx"]
[ext_resource type="Script" path="res://scenes/ui/card_tooltip_popup.gd" id="1_o0jwl"]

[node name="CardTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o0jwl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.698039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -27.5
offset_right = 75.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCard" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardMenuUI" parent="VBoxContainer/TooltipCard" instance=ExtResource("1_a0dfx")]
layout_mode = 2

[node name="Descripcion" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "mvmnvmnmvmnv"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
